# loc

./: Cargo.toml  README.md
benches/: loc.rs
src/: main.rs
src/cli/: mod.rs
src/types/: cli.rs  error.rs  file_count.rs  file_type.rs  mod.rs
